<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StatsPage"
    android:background="@color/Black">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="358dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="180dp"
        android:text=""
        android:textColor="@color/LightCoral"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_starsign"
        android:layout_width="358dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="390dp"
        android:text=""
        android:textColor="@color/LightCoral"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number_logins"
        android:layout_width="358dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="320dp"
        android:text=""
        android:textColor="@color/LightCoral"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number_prediction"
        android:layout_width="358dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="250dp"
        android:text=""
        android:textColor="@color/LightCoral"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="317dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:text="Reset Statistics"
        android:onClick="resetUser"/>

    <Button
        android:id="@+id/back"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="20dp"
        android:onClick="backClick"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/header"
        android:layout_width="358dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:onClick="resetUser"
        android:text=""
        android:textColor="@color/LightCoral"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

</RelativeLayout>