...
        android:background="@color/LightCoral"
        android:prompt="@string/zodiac_sign"
        android:spinnerMode="dropdown" />


    <EditText
        android:id="@+id/name_text"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
...
        android:textAlignment="center"
        android:textColor="@color/Azure"
        android:textSize="20sp"
        tools:layout_marginLeft="50dp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="317dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
...
