<?xml version="1.0" encoding="utf-8"?>

<!--
Defines design of main home screen

Uses RelativeLayout and the constraint version was unable to render
in the app
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomePage"
    android:background="@drawable/backgroundhomescreen"
    >

    <!-- Creates the prediction generator button at the bottom
     of the screen-->

    <Button
        android:id="@+id/tarot_button"
        android:layout_width="317dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="126dp"
        android:text="Generate Tarot Card" />

    <Button
        android:id="@+id/prediction_button"
        android:layout_width="317dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/pred_button_text" />

    <Button
        android:id="@+id/reset_button"
        android:onClick="statsClick"
        android:layout_width="317dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="225dp"
        android:text="Statistics" />


    <TextView
        android:id="@+id/select_zodiac_TV"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="162dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/LightCoral"
        android:textSize="40dp"
        android:textStyle="bold" />


</RelativeLayout>