...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black">

    <Button
        android:id="@+id/harsher"
        android:layout_width="136dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="281dp"
...
        android:backgroundTint="#286C2B"
        android:onClick="backClick"
        android:text="Perfect"
        android:visibility="visible" />

    <Button
        android:id="@+id/milder"
        android:layout_width="136dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
...
