...
        android:layout_width="364dp"
        android:layout_height="314dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/TarotPredictionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tarot" />

    <Button
        android:id="@+id/back"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
...
